--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap");
 *,
 *::after,
 *::before {
@@ -9,7 +9,7 @@
 }
 :root {
   font-size: 62.5%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 body {
   font-size: 1.6rem;
@@ -19,4 +19,7 @@ section {
   width: 95%;
   margin: 0 auto;
   margin-bottom: 5rem;
+}
+h2 {
+  font-size: 3.5rem;
 }
