--- a/client/src/UI/Main/About/About.scss
+++ b/client/src/UI/Main/About/About.scss
@@ -20,7 +20,18 @@
     }
     p {
       font-size: 2rem;
-    
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about_container {
+    .about {
+      flex-direction: row;
+      width: 80%;
+      margin: 0 auto;
+      justify-content: space-between;
+      gap: 5rem;
     }
   }
 }
