--- a/client/src/UI/Main/Home/Home.scss
+++ b/client/src/UI/Main/Home/Home.scss
@@ -1,7 +1,7 @@
 .home_container {
   background: #ffe2a4;
   border-radius: 20px;
-  color: #f39c24;
+
   height: 90vh;
   display: flex;
   align-items: center;
@@ -45,13 +45,22 @@
       border: 5px solid white;
     }
     h1 {
-      font-size: 4.5rem;
+      font-size: 5rem;
+      color: #f39c24;
     }
     h3 {
       font-size: 2.3rem;
+      color: #f39c24;
     }
     p {
       font-size: 2rem;
     }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .home_container {
+    justify-content: center;
+    text-align: center;
   }
 }
