--- a/client/src/UI/Main/Skills/Skills.scss
+++ b/client/src/UI/Main/Skills/Skills.scss
@@ -26,6 +26,13 @@ h2 {
       border-radius: 10px;
       display: flex;
       justify-content: space-between;
+      transform: translateX(100%);
+      visibility: hidden;
+    }
+    .skills-animation {
+      transform: translateX(0);
+      transition: all 0.5s;
+      visibility: visible;
     }
   }
 }
