--- a/client/src/UI/Navigation/Navigation.scss
+++ b/client/src/UI/Navigation/Navigation.scss
@@ -1,9 +1,14 @@
 .nav_container {
   max-width: 100%;
-  height: 5rem;
+  height: 8rem;
   transition: height 0.1s ease-in-out;
+
   position: relative;
+  a {
+    color: black;
+  }
 }
+
 .nav {
   max-width: 90%;
 
@@ -16,7 +21,8 @@
     display: flex;
     height: 40%;
     width: 7rem;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: flex-end;
     &-links {
       position: absolute;
       overflow: hidden;
@@ -67,5 +73,49 @@
     display: block;
     transition-delay: 0.5s;
     border-bottom: #f39c24 1px solid;
+  }
+}
+.nav_right-links-desktop {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .nav {
+    height: 100%;
+  }
+  .nav_right_burger {
+    display: none;
+  }
+  .nav_right {
+    width: 95%;
+    justify-content: flex-end;
+    &-links {
+      display: none;
+    }
+  }
+  .nav_right-links-desktop {
+    position: static;
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+
+    li {
+      display: inline-block;
+      text-transform: uppercase;
+      font-weight: 700;
+      &::after {
+        display: block;
+        content: '';
+        background-color: #ffe2a4;
+        transform: translateY(6px);
+        visibility: hidden;
+        width: 100%;
+        height: 5px;
+        transition: transform 0.5s;
+      }
+    }
+    li:hover::after {
+      transform: translateY(0);
+      visibility: visible;
+    }
   }
 }
